# code-journal

./: .gitignore  Gemfile  README.md  _config.yml  index.md
.github/: copilot-instructions.md
.github/workflows/: pages.yml
_posts/: 2025-08-02-taming-llm-chaos-structured-outputs-fastapi.md  2025-08-02-when-rust-performance-vanishes.md
code/2025-08-02-langchain-structured-fastapi/: .env.template  README.md  main.py  models.py  pyproject.toml  services.py  test_manual.py
code/2025-08-02-sitemap-parser-rust-python/: Cargo.toml  README.md  benchmark.py  pyproject.toml  python_parser.py
code/2025-08-02-sitemap-parser-rust-python/sitemap_parser_showdown/: __init__.py  benchmark.py  python_parser.py
code/2025-08-02-sitemap-parser-rust-python/src/: lib.rs  parser.rs  robots.rs  sitemap.rs
